about html changes and css page whitespace fixes
made the about page columns for the contributors better, and now info can be filled in as needed. also the white space that is persent on both html pages has been sorted with the css changes made

--- a/hacklympics/static/styles.css
+++ b/hacklympics/static/styles.css
@@ -8,7 +8,7 @@
           background-position:center;
           background-size: cover;
       }
-  
+      
       input
       {  
         padding:0;
@@ -105,15 +105,14 @@
       }
       #sleighSlide
       {
-        margin-bottom:60%;
         position: absolute;
         right:100%;
         animation: slide 6s infinite;
       }
       @keyframes slide {
-        0% {right: -100%; }
-        35% {right: 0%; }
-        65% {right: 40%; }
+        0% {right: 0%; }
+        35% {right: 30%; }
+        65% {right: 70%; }
         100% {right: 90%; }
 
       }
@@ -134,18 +133,19 @@
       }
 
       * {
-        box-sizing: border-box;
+        padding:0px;
+        margin:0px;
       }
       
       /* Create three equal columns that floats next to each other */
       .column {
+        text-align:center;
         border-radius: 25px;
         float: left;
         width: 21%;
         margin-top: 8%;
-        margin-left:25px;
-        margin-right:25px;
-        padding: 10px;
+        margin-left:23px;
+        margin-right:23px;
         height: 500px; 
       }
       
